# anime

./: Cargo.toml  LICENSE  README.md
resources/: help.txt  list.txt
resources/anime_list/: attackontitan.txt  onepiece.txt
src/: main.rs  reply_handler.rs
src/reply_handler/: reply_finder.rs  resposes.rs
